--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
         table {
             border: 1px solid #CCC;
             border-collapse: collapse;
+            margin: 0 auto;
         }
 
         td {
@@ -19,7 +20,7 @@
 
 <body>
     <div id='main'></div>
-
+    <button id='reload'>reload</button>
     <script src="main.js"></script>
 </body>
 
