--- a/src/index.html
+++ b/src/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="utf-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <title>Page Title</title>
+    <title>mapz</title>
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <style>
         table {	
@@ -29,6 +29,6 @@
 <body>
     <div id='main'></div>
     <button id="reload">reload</button>
-    <script src="./js/bundle.js"></script>
+    <script src="bundle.js"></script>
 </body>
 </html>
